syntax = "proto3";

package api.sales_forecasting.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/sales_forecasting/v1;v1";

// 销售预测服务，利用历史交易数据和趋势模型预测未来的商品销量。
service SalesForecasting {
  // 获取指定商品的未来销量预测曲线。
  rpc GetProductSalesForecast(GetProductSalesForecastRequest) returns (GetProductSalesForecastResponse);

  // 异步触发销量预测模型的重新训练。
  rpc TrainSalesForecastModel(TrainSalesForecastModelRequest) returns (TrainSalesForecastModelResponse);
}

// 销量预测数据点。
message ForecastResult {
  // 商品 ID。
  uint64 product_id = 1;
  // 预测的具体日期。
  google.protobuf.Timestamp forecast_date = 2;
  // 预测当天的销售件数。
  double predicted_sales_quantity = 3;
  // 置信区间下限。
  double confidence_interval_lower = 4;
  // 置信区间上限。
  double confidence_interval_upper = 5;
}

// 销量预测查询。
message GetProductSalesForecastRequest {
  // 商品 ID。
  uint64 product_id = 1;
  // 向后预测的天数限制。
  uint32 forecast_days = 2;
}

// 销量预测响应。
message GetProductSalesForecastResponse {
  // 时间序列预测结果。
  repeated ForecastResult forecasts = 1;
}

// 模型训练请求。
message TrainSalesForecastModelRequest {
  // 模型算法名称。
  string model_name = 1;
  // 数据清洗后的源路径。
  string data_source = 2;
  // 超参数配置。
  map<string, string> parameters = 3;
}

// 训练任务响应。
message TrainSalesForecastModelResponse {
  // 训练任务 ID。
  string model_id = 1;
  // 任务当前状态 (STARTING, IN_PROGRESS, FINISHED)。
  string status = 2;
}
